resolved issue of message text overflow

--- a/app/src/Controls/Chatbot/Chatbot.css
+++ b/app/src/Controls/Chatbot/Chatbot.css
@@ -1,4 +1,4 @@
 .message-box-text{
-    overflow: visible;
-    height:auto;
+    overflow: visible !important;
+    height:auto !important;
 }
